openshift-template.yaml
apiVersion: v1
kind: Template
labels:
  template: fib-calc
message: Fibonate Calculator
metadata:
  annotations:
    description: This template deploy fibonate calculator.
    iconClass: icon-jenkins
    tags: instant-app,fibcalc
  name: ${NAME}
objects:
- apiVersion: v1
  kind: Service
  metadata:
   name: client-cluster-ip-service
  spec:
   type: ClusterIP
   selector:
    component: web
   ports:
    - port: 3000
      targetPort: 3000
- apiVersion: apps/v1
  kind: Deployment
  metadata:
   name: client-deployment
  spec:
   replicas: 1
   selector:
    matchLabels:
     component: web
   template:
    metadata:
     labels:
      component: web
    spec:
     containers: 
      - name: client
        image: cmotta2016/multi-client
        ports:
         - containerPort: 3000
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
   name: database-persistent-volume-claim
  spec:
   accessModes:
    - ReadWriteOnce
   resources:
    requests:
     storage: 2Gi
- apiVersion: v1
  kind: Service
  metadata:
   name: postgres-cluster-ip-service
  spec:
   type: ClusterIP
   selector:
    component: postgres
   ports:
    - port: 5432
      targetPort: 5432
- apiVersion: apps/v1
  kind: Deployment
  metadata:
   name: postgres-deployment
  spec:
   replicas: 1
   selector:
    matchLabels:
     component: postgres
   template:
    metadata:
     labels:
      component: postgres
    spec:
     volumes:
      - name: postgres-storage
        persistentVolumeClaim:
         claimName: database-persistent-volume-claim
     containers: 
      - name: postgres
        image: postgres
        ports:
         - containerPort: 5432
        volumeMounts:
         - name: postgres-storage
           mountPath: /var/lib/postgresql/data
           subPath: postgres
- apiVersion: v1
  kind: Service
  metadata:
   name: redis-cluster-ip-service
  spec:
   type: ClusterIP
   selector:
    component: redis
  ports:
   - port: 6379
     targetPort: 6379
- apiVersion: apps/v1
  kind: Deployment
  metadata:
   name: redis-deployment
  spec:
   replicas: 1
   selector:
    matchLabels:
     component: redis
   template:
    metadata:
     labels:
      component: redis
    spec:
     containers: 
      - name: redis
        image: redis
        ports:
         - containerPort: 6379
- apiVersion: v1
  kind: Service
  metadata:
   name: server-cluster-ip-service
  spec:
   type: ClusterIP
   selector:
    component: server
   ports:
    - port: 5000
      targetPort: 5000
- apiVersion: apps/v1
  kind: Deployment
  metadata:
   name: server-deployment
  spec:
   replicas: 1
   selector:
    matchLabels:
     component: server
   template:
    metadata:
     labels:
      component: server
    spec:
     containers: 
      - name: server
        image: cmotta2016/multi-server
        ports:
         - containerPort: 5000
- apiVersion: apps/v1
  kind: Deployment
  metadata:
   name: worker-deployment
  spec:
   replicas: 1
   selector:
    matchLabels:
     component: worker
   template:
    metadata:
     labels:
      component: worker
    spec:
     containers: 
      - name: worker
        image: cmotta2016/multi-worker
- apiVersion: apps/v1
  kind: Deployment
  metadata:
   name: nginx-lb
  spec:
   replicas: 1
   selector:
    matchLabels:
     component: lb
   template:
    metadata:
     labels:
      component: lb
    spec:
     containers: 
      - name: nginx-lb
        image: cmotta2016/multi-nginx-2
        ports:
         - containerPort: 80
- apiVersion: v1
  kind: Service
  metadata:
   name: lb-cluster-ip-service
  spec:
   type: ClusterIP
   selector:
    component: lb
   ports:
    - port: 80
      targetPort: 80
- apiVersion: v1
  kind: Route
  metadata:
    name: ${NAME}-route
  spec:
    to:
      kind: Service
      name: lb-cluster-ip-service
parameters:
- description: The name assigned to all of the frontend objects defined in this template.
  displayName: Name
  name: NAME
  required: true
  value: fib-calc
